[package]
name = "concon"
version = "0.1.0"
authors = ["Djordje Lukic <djordje.lukic@docker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compose_yml = "0.0.55"
kube = { version = "0.15.0", features = ["openapi"] }
k8s-openapi = { version = "0.5.0", features = ["v1_15"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
